- Обновлена работа приложения для соответствия работы тестов (friends / Friend add)