@@ -53,8 +53,8 @@ public class UserDbStorage implements UserStorage {
     public User getUser(long id) {
         String sql = "SELECT * FROM users WHERE user_id = ?";
         List<User> users = jdbcTemplate.query(sql, new UserMapper(), id);
-        if (users.isEmpty()) return null;  // Возвращаем null, если нет
-        User user = users.get(0);
+        if (users.isEmpty()) return null;
+        User user = users.getFirst();
         loadAllFriends(user);
         return user;
     }
@@ -89,20 +89,28 @@ public class UserDbStorage implements UserStorage {
         }
 
         String checkSql = "SELECT COUNT(*) FROM user_friendships WHERE user_id = ? AND friend_id = ?";
-        Integer count = jdbcTemplate.queryForObject(checkSql, Integer.class, userId, friendId);
-
-        if (count != null && count > 0) {
+        Integer exists = jdbcTemplate.queryForObject(checkSql, Integer.class, userId, friendId);
+        if (exists > 0) {
             return;
         }
 
-        count = jdbcTemplate.queryForObject(checkSql, Integer.class, friendId, userId);
+        String checkReverseSql = "SELECT confirmed FROM user_friendships WHERE user_id = ? AND friend_id = ?";
+        Boolean reverseConfirmed = null;
+        try {
+            reverseConfirmed = jdbcTemplate.queryForObject(checkReverseSql, Boolean.class, friendId, userId);
+        } catch (org.springframework.dao.EmptyResultDataAccessException ex) {
+            // оставляем reverseConfirmed = null
+        }
 
-        if (count != null && count > 0) {
-            String updateSql = "UPDATE user_friendships SET confirmed = TRUE WHERE user_id = ? AND friend_id = ?";
-            jdbcTemplate.update(updateSql, friendId, userId);
-            jdbcTemplate.update(updateSql, userId, friendId);
-        } else {
+        if (reverseConfirmed == null) {
             String insertSql = "INSERT INTO user_friendships (user_id, friend_id, confirmed) VALUES (?, ?, FALSE)";
+            jdbcTemplate.update(insertSql, userId, friendId);
+            jdbcTemplate.update(insertSql, friendId, userId);
+        } else if (!reverseConfirmed) {
+            String updateSql = "UPDATE user_friendships SET confirmed = TRUE WHERE (user_id = ? AND friend_id = ?) OR (user_id = ? AND friend_id = ?)";
+            jdbcTemplate.update(updateSql, userId, friendId, friendId, userId);
+        } else {
+            String insertSql = "INSERT INTO user_friendships (user_id, friend_id, confirmed) VALUES (?, ?, TRUE)";
             jdbcTemplate.update(insertSql, userId, friendId);
         }
     }
@@ -115,17 +123,11 @@ public class UserDbStorage implements UserStorage {
     }
 
     private void loadAllFriends(User user) {
-        user.getFriends().clear();
-        String sql = "SELECT user_id, friend_id, confirmed FROM user_friendships WHERE user_id = ? OR friend_id = ?";
-
+        String sql = "SELECT friend_id, confirmed FROM user_friendships WHERE user_id = ?";
         jdbcTemplate.query(sql, rs -> {
-            Long userId = rs.getLong("user_id");
             Long friendId = rs.getLong("friend_id");
             boolean confirmed = rs.getBoolean("confirmed");
-
-            Long otherId = userId.equals(user.getId()) ? friendId : userId;
-
-            user.getFriends().put(otherId, confirmed ? FriendshipStatus.CONFIRMED : FriendshipStatus.UNCONFIRMED);
-        }, user.getId(), user.getId());
+            user.getFriends().put(friendId, confirmed ? FriendshipStatus.CONFIRMED : FriendshipStatus.UNCONFIRMED);
+        }, user.getId());
     }
 }
